Migrate unit tests from JUnit 4 to JUnit 5(Jupiter)
Signed-off-by: lance <leehaut@gmail.com>